--- a/ui/roundlist/style.css
+++ b/ui/roundlist/style.css
@@ -19,3 +19,6 @@
     justify-content: center;
     align-items: center;
 }
+.hideScrollbar {
+    composes: hideScrollbar from 'ui/common.css';
+}
